--- a/section 2/cafe/package.json
+++ b/section 2/cafe/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^4.1.3",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.0",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
