--- a/section 6/cafe/package.json
+++ b/section 6/cafe/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "moxios": "^0.4.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
